push all to github again

--- a/html_1/index.html
+++ b/html_1/index.html
@@ -12,8 +12,8 @@
     <nav>
       <div class="logo">BookMatch</div>
       <div class="nav-links">
-        <a href="/" aria-current="page">Home</a>
-        <a href="/recommendations.html">My Recommendations</a>
+        <a href="index.html" aria-current="page">Home</a>
+        <a href="recommendations.html">My Recommendations</a>
         <a href="/about.html">About</a>
       </div>
     </nav>
