--- a/html_1/recommendations.html
+++ b/html_1/recommendations.html
@@ -8,11 +8,16 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/page2.html" aria-current="page">Other page</a>
-    </nav>
-    <main>
+    <header>
+      <nav>
+        <div class="logo">BookMatch</div>
+        <div class="nav-links">
+          <a href="index.html" aria-current="page">Home</a>
+          <a href="recommendations.html">My Recommendations</a>
+          <a href="/about.html">About</a>
+        </div>
+      </nav>
+    </header>    <main>
       <h1>My other page</h1>
     </main>
   </body>
