--- a/html_1/index.html
+++ b/html_1/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
   <header>
