--- a/html_1/recommendations.html
+++ b/html_1/recommendations.html
@@ -59,6 +59,20 @@
 
   <script src="script.js"></script>
 
+  <div class="container">
+    <h1>Reading Score Calculator</h1>
+    <div class="input-group">
+      <label for="minutes">Minutes Read:</label>
+      <input type="number" id="minutes" placeholder="Enter minutes">
+    </div>
+    <div class="input-group">
+      <label for="books">Books Read:</label>
+      <input type="number" id="books" placeholder="Enter number of books">
+    </div>
+    <button onclick="calculateReadingScore()">Calculate</button>
+    <h2 id="result">Reading Score: </h2>
+  </div>
+
 
   </body>
 </html>
