--- a/html_1/index.html
+++ b/html_1/index.html
@@ -9,6 +9,19 @@
     <script src="script.js"></script>
   </head>
   <body>
+ 
+  <div class="login-container">
+    <h2>Login</h2>
+    <form id="loginForm">
+      <input type="text" id="username" placeholder="Username" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit">Login</button>
+      <p id="error-msg"></p>
+    </form>
+  </div>
+
+  <script src="script.js"></script>
+
   <header>
     <nav>
       <div class="logo">BookMatch</div>
